--- a/Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/10/27 21:05:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.init()[pri:0, instance:automation.testsuite.Login@4b0d79fc]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/10/27 21:05:09</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testcase1()[pri:0, instance:automation.testsuite.Login@4b0d79fc]">testcase1</td> 
+<tr bgcolor="6d9386">  <td>24/10/28 21:26:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Employee.nhanVien()[pri:0, instance:automation.testsuite.Employee@47e2e487]">nhanVien</td> 
   <td>main@1937962514</td>   <td></td> </tr>
 </table>
