--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/10/28 21:26:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Employee.nhanVien()[pri:0, instance:automation.testsuite.Employee@47e2e487]">nhanVien</td> 
+<tr bgcolor="6d9386">  <td>24/10/30 22:04:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="practiceXpathDay8.getLocatorAutomationfc()[pri:0, instance:automation.testsuite.practiceXpathDay8@6bd61f98]">getLocatorAutomationfc</td> 
   <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/10/30 22:04:14</td>   <td>-8250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;practiceXpathDay8.openChrome()[pri:0, instance:automation.testsuite.practiceXpathDay8@6bd61f98]">&gt;&gt;openChrome</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
