--- a/Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/11/17 13:49:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Techydevs.getTechydevs()[pri:0, instance:automation.testsuite.Techydevs@6bd61f98]">getTechydevs</td> 
+<tr bgcolor="6d9386">  <td>24/11/19 23:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalSQA.chooseCountryOption()[pri:0, instance:automation.testsuite.GlobalSQA@6bd61f98]">chooseCountryOption</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/17 13:49:54</td>   <td>-3281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Techydevs.openChrome()[pri:0, instance:automation.testsuite.Techydevs@6bd61f98]">&gt;&gt;openChrome</td> 
+<tr bgcolor="6d9386">  <td>24/11/19 23:33:57</td>   <td>-4546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GlobalSQA.openChrome()[pri:0, instance:automation.testsuite.GlobalSQA@6bd61f98]">&gt;&gt;openChrome</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
