Thinh push BTVN B14

--- a/Selenium/test-output/old/Default suite/classes.html
+++ b/Selenium/test-output/old/Default suite/classes.html
@@ -4,30 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>automation.testsuite.BTVN_B13_Crmstar_LoginTest</td>
+<td>automation.testsuite.BTVN_B14_Alada_LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>logout</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginFail_IncorrectPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginFail_IncorrectEmailAndPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginSuccessfully</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginFail_IncorrectEmail</td>
+<td>LoginSuccessfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -37,7 +21,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>openBrower</td>
+<td>openFireFox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
