--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-282498705\testng-customsuite.xml</span>
+                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--132280263\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B13_Crmstar_LoginTest" class="method navigator-link" hash-for-method="loginFail_IncorrectEmail">loginFail_IncorrectEmail</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B13_Crmstar_LoginTest" class="method navigator-link" hash-for-method="loginFail_IncorrectEmailAndPassword">loginFail_IncorrectEmailAndPassword</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B13_Crmstar_LoginTest" class="method navigator-link" hash-for-method="loginFail_IncorrectPassword">loginFail_IncorrectPassword</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B13_Crmstar_LoginTest" class="method navigator-link" hash-for-method="loginSuccessfully">loginSuccessfully</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B13_Crmstar_LoginTest" class="method navigator-link" hash-for-method="logout">logout</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B14_Alada_LoginTest" class="method navigator-link" hash-for-method="LoginSuccessfully">LoginSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,42 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automation.testsuite.BTVN_B13_Crmstar_LoginTest</span>
+              <span class="class-name">automation.testsuite.BTVN_B14_Alada_LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginFail_IncorrectEmail">
-                  </a> <!-- loginFail_IncorrectEmail -->
-                  <span class="method-name">loginFail_IncorrectEmail</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginFail_IncorrectEmailAndPassword">
-                  </a> <!-- loginFail_IncorrectEmailAndPassword -->
-                  <span class="method-name">loginFail_IncorrectEmailAndPassword</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginFail_IncorrectPassword">
-                  </a> <!-- loginFail_IncorrectPassword -->
-                  <span class="method-name">loginFail_IncorrectPassword</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginSuccessfully">
-                  </a> <!-- loginSuccessfully -->
-                  <span class="method-name">loginSuccessfully</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="logout">
-                  </a> <!-- logout -->
-                  <span class="method-name">logout</span>
+                  <a name="LoginSuccessfully">
+                  </a> <!-- LoginSuccessfully -->
+                  <span class="method-name">LoginSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-282498705\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--132280263\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automation.testsuite.BTVN_B13_Crmstar_LoginTest&quot;/&gt;
+      &lt;class name=&quot;automation.testsuite.BTVN_B14_Alada_LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -234,32 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'logout')
-data.setCell(0, 2, 'automation.testsuite.BTVN_B13_Crmstar_LoginTest')
-data.setCell(0, 3, 11011);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginSuccessfully')
-data.setCell(1, 2, 'automation.testsuite.BTVN_B13_Crmstar_LoginTest')
-data.setCell(1, 3, 1271);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginFail_IncorrectEmail')
-data.setCell(2, 2, 'automation.testsuite.BTVN_B13_Crmstar_LoginTest')
-data.setCell(2, 3, 227);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginFail_IncorrectPassword')
-data.setCell(3, 2, 'automation.testsuite.BTVN_B13_Crmstar_LoginTest')
-data.setCell(3, 3, 223);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginFail_IncorrectEmailAndPassword')
-data.setCell(4, 2, 'automation.testsuite.BTVN_B13_Crmstar_LoginTest')
-data.setCell(4, 3, 217);
+data.setCell(0, 1, 'LoginSuccessfully')
+data.setCell(0, 2, 'automation.testsuite.BTVN_B14_Alada_LoginTest')
+data.setCell(0, 3, 39956);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 39 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,46 +221,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automation.testsuite.BTVN_B13_Crmstar_LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automation.testsuite.BTVN_B14_Alada_LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">openBrower</span>
+                <span class="method-name">openFireFox</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginSuccessfully</span>
-                <span class="method-start">4193 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openBrower</span>
-                <span class="method-start">5467 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginFail_IncorrectEmail</span>
-                <span class="method-start">8994 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openBrower</span>
-                <span class="method-start">9222 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginFail_IncorrectPassword</span>
-                <span class="method-start">13179 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openBrower</span>
-                <span class="method-start">13404 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginFail_IncorrectEmailAndPassword</span>
-                <span class="method-start">17242 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openBrower</span>
-                <span class="method-start">17460 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">logout</span>
-                <span class="method-start">21520 ms</span>
+                <span class="method-name">LoginSuccessfully</span>
+                <span class="method-start">24629 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
