--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,24 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_B13_Crmstar_LoginTest.openBrower()[pri:0, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">&gt;&gt;openBrower</td> 
+<tr bgcolor="6d9386">  <td>24/12/01 02:04:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_B14_Alada_LoginTest.openFireFox()[pri:0, instance:automation.testsuite.BTVN_B14_Alada_LoginTest@13fd2ccd]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:51</td>   <td>-4281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_B13_Crmstar_LoginTest.loginFail_IncorrectPassword()[pri:3, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">loginFail_IncorrectPassword</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_B13_Crmstar_LoginTest.openBrower()[pri:0, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">&gt;&gt;openBrower</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:55</td>   <td>-218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_B13_Crmstar_LoginTest.loginFail_IncorrectEmailAndPassword()[pri:4, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">loginFail_IncorrectEmailAndPassword</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:59</td>   <td>4060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_B13_Crmstar_LoginTest.logout()[pri:5, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">logout</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_B13_Crmstar_LoginTest.openBrower()[pri:0, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">&gt;&gt;openBrower</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_B13_Crmstar_LoginTest.openBrower()[pri:0, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">&gt;&gt;openBrower</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:47</td>   <td>-8466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_B13_Crmstar_LoginTest.loginFail_IncorrectEmail()[pri:2, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">loginFail_IncorrectEmail</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_B13_Crmstar_LoginTest.openBrower()[pri:0, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">&gt;&gt;openBrower</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/11/24 02:59:42</td>   <td>-13267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_B13_Crmstar_LoginTest.loginSuccessfully()[pri:1, instance:automation.testsuite.BTVN_B13_Crmstar_LoginTest@72e5a8e]">loginSuccessfully</td> 
+<tr bgcolor="6d9386">  <td>24/12/01 02:04:56</td>   <td>24628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_B14_Alada_LoginTest.LoginSuccessfully()[pri:0, instance:automation.testsuite.BTVN_B14_Alada_LoginTest@13fd2ccd]">LoginSuccessfully</td> 
   <td>main@1937962514</td>   <td></td> </tr>
 </table>
