--- a/Selenium/test-output/emailable-report.html
+++ b/Selenium/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24.911</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">36.222</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">automation.testsuite.Tedu_CapNhapMatKhauTest</td><td><a href="#m0">LoginSuccessfully</a></td><td rowspan="1">1733063837234</td><td rowspan="1">7295</td></tr><tr class="passedeven"><td><a href="#m1">UpdatePasswordSuccessfully</a></td><td rowspan="1">1733063822406</td><td rowspan="1">11600</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">automation.testsuite.Tedu_CapNhapMatKhauTest</td><td><a href="#m0">LoginSuccessfully</a></td><td rowspan="1">1733283977788</td><td rowspan="1">7208</td></tr><tr class="passedeven"><td><a href="#m1">SearchSuccessfully</a></td><td rowspan="1">1733283987108</td><td rowspan="1">10631</td></tr><tr class="passedeven"><td><a href="#m2">UpdatePasswordSuccessfully</a></td><td rowspan="1">1733283964363</td><td rowspan="1">11493</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">automation.testsuite.Tedu_CapNhapMatKhauTest#LoginSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">automation.testsuite.Tedu_CapNhapMatKhauTest#UpdatePasswordSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">automation.testsuite.Tedu_CapNhapMatKhauTest#SearchSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">automation.testsuite.Tedu_CapNhapMatKhauTest#UpdatePasswordSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
