--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--642238190\testng-customsuite.xml</span>
+                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-149275019\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -105,6 +105,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="LoginSuccessfully">LoginSuccessfully</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully">SearchSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -139,6 +144,13 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="SearchSuccessfully">
+                  </a> <!-- SearchSuccessfully -->
+                  <span class="method-name">SearchSuccessfully</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="UpdatePasswordSuccessfully">
                   </a> <!-- UpdatePasswordSuccessfully -->
                   <span class="method-name">UpdatePasswordSuccessfully</span>
@@ -149,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--642238190\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-149275019\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -198,20 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'UpdatePasswordSuccessfully')
 data.setCell(0, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(0, 3, 11600);
+data.setCell(0, 3, 11493);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginSuccessfully')
+data.setCell(1, 1, 'SearchSuccessfully')
 data.setCell(1, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(1, 3, 7295);
+data.setCell(1, 3, 10631);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'LoginSuccessfully')
+data.setCell(2, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
+data.setCell(2, 3, 7208);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 29 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,15 +260,23 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">UpdatePasswordSuccessfully</span>
-                <span class="method-start">2761 ms</span>
+                <span class="method-start">2818 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">openFireFox</span>
-                <span class="method-start">14363 ms</span>
+                <span class="method-start">14317 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginSuccessfully</span>
-                <span class="method-start">17589 ms</span>
+                <span class="method-start">16243 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">openFireFox</span>
+                <span class="method-start">23452 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">SearchSuccessfully</span>
+                <span class="method-start">25563 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
