--- a/Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/12/01 21:37:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.LoginSuccessfully()[pri:2, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@b9b00e0]">LoginSuccessfully</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 10:46:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.LoginSuccessfully()[pri:2, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">LoginSuccessfully</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/01 21:37:02</td>   <td>-14828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.UpdatePasswordSuccessfully()[pri:1, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@b9b00e0]">UpdatePasswordSuccessfully</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 10:46:27</td>   <td>9320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.SearchSuccessfully()[pri:3, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">SearchSuccessfully</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/01 21:37:14</td>   <td>-3226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@b9b00e0]">&gt;&gt;openFireFox</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 10:46:04</td>   <td>-13425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.UpdatePasswordSuccessfully()[pri:1, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">UpdatePasswordSuccessfully</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 10:46:24</td>   <td>7209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/01 21:37:14</td>   <td>-3226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@b9b00e0]">&gt;&gt;openFireFox</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 10:46:24</td>   <td>7209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">&gt;&gt;openFireFox</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 10:46:24</td>   <td>7209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
