Thinh push them độ bao phủ cho case Search

--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-149275019\testng-customsuite.xml</span>
+                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--1300349244\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,12 +109,22 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully">SearchSuccessfully</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_emptyValue">SearchSuccessfully_emptyValue</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="UpdatePasswordSuccessfully">UpdatePasswordSuccessfully</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_keywordNoResults">SearchSuccessfully_keywordNoResults</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_specialCharacters">SearchSuccessfully_specialCharacters</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_validValue">SearchSuccessfully_validValue</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -144,16 +154,30 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="SearchSuccessfully">
-                  </a> <!-- SearchSuccessfully -->
-                  <span class="method-name">SearchSuccessfully</span>
+                  <a name="SearchSuccessfully_emptyValue">
+                  </a> <!-- SearchSuccessfully_emptyValue -->
+                  <span class="method-name">SearchSuccessfully_emptyValue</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="UpdatePasswordSuccessfully">
-                  </a> <!-- UpdatePasswordSuccessfully -->
-                  <span class="method-name">UpdatePasswordSuccessfully</span>
+                  <a name="SearchSuccessfully_keywordNoResults">
+                  </a> <!-- SearchSuccessfully_keywordNoResults -->
+                  <span class="method-name">SearchSuccessfully_keywordNoResults</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SearchSuccessfully_specialCharacters">
+                  </a> <!-- SearchSuccessfully_specialCharacters -->
+                  <span class="method-name">SearchSuccessfully_specialCharacters</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SearchSuccessfully_validValue">
+                  </a> <!-- SearchSuccessfully_validValue -->
+                  <span class="method-name">SearchSuccessfully_validValue</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-149275019\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--1300349244\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,24 +234,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UpdatePasswordSuccessfully')
+data.setCell(0, 1, 'SearchSuccessfully_specialCharacters')
 data.setCell(0, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(0, 3, 11493);
+data.setCell(0, 3, 10751);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'SearchSuccessfully')
+data.setCell(1, 1, 'SearchSuccessfully_keywordNoResults')
 data.setCell(1, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(1, 3, 10631);
+data.setCell(1, 3, 10736);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginSuccessfully')
+data.setCell(2, 1, 'SearchSuccessfully_emptyValue')
 data.setCell(2, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(2, 3, 7208);
+data.setCell(2, 3, 10651);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'SearchSuccessfully_validValue')
+data.setCell(3, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
+data.setCell(3, 3, 10548);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'LoginSuccessfully')
+data.setCell(4, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
+data.setCell(4, 3, 7181);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -259,24 +291,40 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">UpdatePasswordSuccessfully</span>
-                <span class="method-start">2818 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openFireFox</span>
-                <span class="method-start">14317 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <span class="method-name">LoginSuccessfully</span>
-                <span class="method-start">16243 ms</span>
+                <span class="method-start">2821 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">openFireFox</span>
-                <span class="method-start">23452 ms</span>
+                <span class="method-start">10007 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">SearchSuccessfully</span>
-                <span class="method-start">25563 ms</span>
+                <span class="method-name">SearchSuccessfully_validValue</span>
+                <span class="method-start">12055 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">openFireFox</span>
+                <span class="method-start">22604 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">SearchSuccessfully_keywordNoResults</span>
+                <span class="method-start">24668 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">openFireFox</span>
+                <span class="method-start">35405 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">SearchSuccessfully_emptyValue</span>
+                <span class="method-start">37495 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">openFireFox</span>
+                <span class="method-start">48147 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">SearchSuccessfully_specialCharacters</span>
+                <span class="method-start">50260 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
