--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,16 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/12/04 10:46:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">&gt;&gt;openFireFox</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/04 10:46:04</td>   <td>-20634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.UpdatePasswordSuccessfully()[pri:1, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">UpdatePasswordSuccessfully</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 13:39:29</td>   <td>-45326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.LoginSuccessfully()[pri:2, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">LoginSuccessfully</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/04 10:46:17</td>   <td>-7209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.LoginSuccessfully()[pri:2, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">LoginSuccessfully</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 13:39:39</td>   <td>-36092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.SearchSuccessfully_validValue()[pri:3, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">SearchSuccessfully_validValue</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/04 10:46:27</td>   <td>2111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.SearchSuccessfully()[pri:3, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">SearchSuccessfully</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/04 10:46:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">&gt;&gt;openFireFox</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/04 10:46:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@506ae4d4]">&gt;&gt;openFireFox</td> 
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:04</td>   <td>-10652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.SearchSuccessfully_emptyValue()[pri:5, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">SearchSuccessfully_emptyValue</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:17</td>   <td>2113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.SearchSuccessfully_specialCharacters()[pri:6, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">SearchSuccessfully_specialCharacters</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 13:39:51</td>   <td>-23479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tedu_CapNhapMatKhauTest.SearchSuccessfully_keywordNoResults()[pri:4, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">SearchSuccessfully_keywordNoResults</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">&gt;&gt;openFireFox</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">&gt;&gt;openFireFox</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/12/04 13:40:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tedu_CapNhapMatKhauTest.openFireFox()[pri:0, instance:automation.testsuite.Tedu_CapNhapMatKhauTest@72e5a8e]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
