Thinh push BTVN B18

--- a/Selenium/test-output/old/TestSuite/classes.html
+++ b/Selenium/test-output/old/TestSuite/classes.html
@@ -4,6 +4,32 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>handleZaloWindowPopup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>openBrowser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>automation.testsuite.Day17_BepAnToan_WindowPopup</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -21,7 +47,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>openFireFox</td>
+<td>openBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
