--- a/Selenium/test-output/emailable-report.html
+++ b/Selenium/test-output/emailable-report.html
@@ -8,11 +8,21 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12.752</td><td></td><td></td></tr>
+<tr><th colspan="8">TestSuite</th></tr>
+<tr><td><a href="#t0">Regression Test all classes on chrome</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17.219</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Regression Test all classes on firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">22.924</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Regression Test all classes on edge</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21.041</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">6</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">61.184</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest</td><td><a href="#m0">messengerIframe</a></td><td rowspan="1">1733847133727</td><td rowspan="1">8399</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression Test all classes on chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest</td><td><a href="#m0">handleZaloWindowPopup</a></td><td rowspan="1">1734194116794</td><td rowspan="1">2615</td></tr><tr class="passedodd"><td rowspan="1">automation.testsuite.Day17_BepAnToan_WindowPopup</td><td><a href="#m1">handleMessagerWindowPopup</a></td><td rowspan="1">1734194123050</td><td rowspan="1">5637</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Regression Test all classes on firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest</td><td><a href="#m2">handleZaloWindowPopup</a></td><td rowspan="1">1734194135960</td><td rowspan="1">2481</td></tr><tr class="passedodd"><td rowspan="1">automation.testsuite.Day17_BepAnToan_WindowPopup</td><td><a href="#m3">handleMessagerWindowPopup</a></td><td rowspan="1">1734194146465</td><td rowspan="1">5183</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Regression Test all classes on edge &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest</td><td><a href="#m4">handleZaloWindowPopup</a></td><td rowspan="1">1734194158042</td><td rowspan="1">3007</td></tr><tr class="passedodd"><td rowspan="1">automation.testsuite.Day17_BepAnToan_WindowPopup</td><td><a href="#m5">handleMessagerWindowPopup</a></td><td rowspan="1">1734194167429</td><td rowspan="1">5264</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest#messengerIframe</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Regression Test all classes on chrome</h2><h3 id="m0">automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest#handleZaloWindowPopup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">automation.testsuite.Day17_BepAnToan_WindowPopup#handleMessagerWindowPopup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Regression Test all classes on firefox</h2><h3 id="m2">automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest#handleZaloWindowPopup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">automation.testsuite.Day17_BepAnToan_WindowPopup#handleMessagerWindowPopup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Regression Test all classes on edge</h2><h3 id="m4">automation.testsuite.BTVN_Buoi18_DienMayNhapKhauGiaReTest#handleZaloWindowPopup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">automation.testsuite.Day17_BepAnToan_WindowPopup#handleMessagerWindowPopup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
