--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/12/10 23:12:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTNVN_Buoi17_B2_IframeZaloTest.messengerIframe()[pri:1, instance:automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest@1ed6388a]">messengerIframe</td> 
+<tr bgcolor="6d9386">  <td>24/12/14 23:28:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Day17_BepAnToan_WindowPopup.handleMessagerWindowPopup()[pri:0, instance:automation.testsuite.Day17_BepAnToan_WindowPopup@5a45133e]">handleMessagerWindowPopup</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/10 23:12:09</td>   <td>-4322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTNVN_Buoi17_B2_IframeZaloTest.openChrome()[pri:0, instance:automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest@1ed6388a]">&gt;&gt;openChrome</td> 
+<tr bgcolor="6d9386">  <td>24/12/14 23:28:04</td>   <td>-4545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Day17_BepAnToan_WindowPopup.openFireFox()[pri:0, instance:automation.testsuite.Day17_BepAnToan_WindowPopup@5a45133e]">&gt;&gt;openFireFox</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
